tests/baselines/reference/shadowedInternalModule.errors.txt
shadowedInternalModule.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(13,20): error TS2437: Module 'A' is hidden by a local declaration with the same name.
shadowedInternalModule.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(17,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(29,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(30,5): error TS2440: Import declaration conflicts with local declaration of 'Y'.
shadowedInternalModule.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(41,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(43,17): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(46,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(47,10): error TS2438: Import name cannot be 'any'.
shadowedInternalModule.ts(52,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(56,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(61,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
shadowedInternalModule.ts(62,3): error TS2440: Import declaration conflicts with local declaration of 'Q'.


==== shadowedInternalModule.ts (16 errors) ====
    // all errors imported modules conflict with local variables
    
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var Point = { x: 0, y: 0 }
        export interface Point {
            x: number;
            y: number;
        }
    } 
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var A = { x: 0, y: 0 };
        import Point = A;
                       ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    
    module X {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Y {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface Point{
                x: number;
                y: number
            }
        }
    
        export class Y {
            name: string;
        }
    }
    
    module Z {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import Y = X.Y;
        ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Y'.
    
        var Y = 12;
    }
    
    //
    
    module a {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export type A = number;
    }
    
    module b {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export import A = a.A;
      export module A {}
                    ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      import any = b.A;
             ~~~
!!! error TS2438: Import name cannot be 'any'.
    }
    
    //
    
    module q {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export const Q = {};
    }
    
    module r {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export import Q = q.Q;
      export type Q = number;
    }
    
    module s {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      import Q = r.Q;
      ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'Q'.
      const Q = 0;
    }
    